# claude-craft

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  download_thumbnails.py  install.sh  intro_tip_links.csv  note-post-20260223.txt  solo-unicorn-methodology.md
clinic-crawl/: pyproject.toml
clinic-crawl/clinic_crawl/: __main__.py  config.py  net.py  patterns.py  storage.py
clinic-crawl/clinic_crawl/models/: __init__.py  csv_row.py  doctor.py  enums.py  hospital.py  social.py
clinic-crawl/clinic_crawl/scripts/: clean_csv.py  decode_qr.py  extract_doctors.py  extract_social.py  prescan.py  report.py  resolve_redirects.py  triage.py  validate.py
clinic-crawl/patterns/: chain_hospitals.json  doctor_menu.json  popup_close.json  social_urls.json
clinic-crawl/tests/: conftest.py  test_clean_csv.py  test_cli.py  test_decode_qr.py  test_extract_doctors.py  test_extract_social.py  test_models.py  test_net.py  test_prescan.py  test_storage.py  test_triage.py
crawl/: __init__.py  base.py  config.py  hospital_schema.py  kakao_map_schema.py  naver_map_schema.py  pyproject.toml
crawl/docs/: base_schema.md  kakao_map_schema.md  naver_map_schema.md
crawl/naver_hospital/: __init__.py  __main__.py  browser.py  downloader.py  human_behavior.py  orchestrator.py  stealth.py  storage.py
crawl/naver_hospital/scrapers/: __init__.py  detection.py  home.py  information.py  photos.py  search.py
scripts/clinic-storage/: compare_crawls.py  convert_excel.py  crawl_batch.py  crawl_doctor_cycle.py  crawl_single.py  edge_cases.md  generate_review.py  pyproject.toml  storage_manager.py
scripts/clinic-storage/clinic_crawler/: __init__.py  codex_validator.py  constants.py  google_drive.py  js_snippets.py  korean_name.py  llm_verifier.py  log.py  ocr.py  steps.py  url_utils.py
scripts/clinic-storage/tests/: conftest.py  test_codex_validator.py  test_constants.py  test_crawl_batch.py  test_crawl_doctor_cycle.py  test_google_drive.py  test_js_python_sync.py  test_korean_name.py  test_llm_verifier.py  test_ocr.py  test_ocr_parsing.py  test_storage.py  test_storage_manager.py  test_url_utils.py
tools/_shared/: pyproject.toml
tools/_shared/outreach_shared/: __init__.py
tools/_shared/outreach_shared/account/: health.py  pool.py
tools/_shared/outreach_shared/ai/: llm_client.py
tools/_shared/outreach_shared/browser/: stealth.py
tools/_shared/outreach_shared/daemon/: loop.py
tools/_shared/outreach_shared/db/: __init__.py  models.py  postgres.py
tools/_shared/outreach_shared/utils/: time_utils.py
tools/_shared/tests/: test_account_pool.py  test_daemon.py  test_models.py
tools/clinic-consult/: .gitignore  README.md  RUNBOOK.md  pyproject.toml
tools/clinic-consult/docs/: GUIDE-KO.md
tools/clinic-consult/src/: __main__.py  config.py  main.py  reserve.py
tools/clinic-consult/src/ai/: classifier.py  router.py
tools/clinic-consult/src/clinic/: lookup.py  models.py
tools/clinic-consult/src/db/: models.py
tools/clinic-consult/src/device/: __init__.py  monitor.py  navigator.py  reader.py  sender.py
tools/clinic-consult/src/emulator/: device.py  human_sim.py  ldplayer.py
tools/clinic-consult/src/messenger/: __init__.py  deep_link.py  selectors.py
tools/clinic-consult/src/outbound/: contact.py  worker.py
tools/clinic-consult/src/pipeline/: __init__.py  receive.py  respond.py  send.py
tools/clinic-consult/src/reservation/: exporter.py  models.py  repository.py
tools/clinic-consult/src/utils/: korean_text.py  logger.py  rate_limiter.py
tools/clinic-consult/src/web/: app.py
tools/clinic-consult/templates/: faq_templates.yaml
tools/clinic-consult/tests/: conftest.py  test_clinic_lookup.py  test_clinic_models.py  test_messenger.py  test_monitor.py  test_outbound_conversation.py  test_outbound_worker.py  test_pipeline_stages.py  test_rate_limiter.py  test_reservation_migrations.py  test_reservation_repository.py  test_web_auth.py
tools/kakao-consult/: .env.example  config.yaml  pyproject.toml
tools/kakao-consult/docs/: GUIDE-KO.md
tools/kakao-consult/src/: config.py  main.py  reserve.py  scheduler.py
tools/kakao-consult/src/ai/: __init__.py  classifier.py  prompts.py
tools/kakao-consult/src/clinic/: lookup.py  models.py
tools/kakao-consult/src/db/: repository.py
tools/kakao-consult/src/emulator/: device.py  human_sim.py
tools/kakao-consult/src/kakao/: __init__.py  monitor.py  navigator.py  reader.py  selectors.py  sender.py
tools/kakao-consult/src/knowledge/: faq_matcher.py  templates.py
tools/kakao-consult/src/outbound/: contact.py  prompts.py  (+2 more)
tools/kakao-consult/templates/: greeting_templates.yaml
tools/kakao-consult/tests/: conftest.py  test_classifier.py  test_clinic_models.py  test_config.py  test_db.py  test_faq_matcher.py  test_human_sim.py  test_korean_text.py  test_monitor.py  test_outbound_prompts.py  test_reservation_exporter.py  test_router.py  test_template.py
tools/x-outreach/: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  config.yaml  login_helper.py  pyproject.toml  run_full_cycle.py  test_stages_live.py  verify.py
tools/x-outreach/data/: config.json  user_agents.json
tools/x-outreach/docs/: README.md
tools/x-outreach/launchd/: com.asknandemo.xoutreach.plist  com.xoutreach.master.plist
tools/x-outreach/personas/: README.md  accounts.yaml  base_policy.md  keyword_matrix.yaml  keyword_validation_2026-02-23.md  p01_price.md  p02_beginner_guide.md  p03_procedure_explainer.md  p04_risk_care.md  p05_lifestyle.md  profiles-prompts.txt  profiles.yaml  style_lexicon.yaml
tools/x-outreach/scripts/: migrate_sqlite_to_pg.py  setup.sh  setup_profiles.py  status.py
tools/x-outreach/src/: __init__.py  config.py  daemon.py  main.py  persona.py  scheduler.py
tools/x-outreach/tests/: __init__.py  conftest.py  test_analyze.py  test_classifier.py  test_collect.py  test_config.py  test_content_gen.py  test_db.py  test_dm.py  test_dm_passcode.py  test_halt.py  test_keywords.py  test_m4.py  test_nurture.py  test_persona.py  test_pipeline.py  test_posting.py  test_reply.py  test_search.py  test_templates.py
(+1758 files in other folders)
