[project]
name = "clinic-crawl"
version = "0.1.0"
description = "Korean skin clinic website crawler for social channels and doctor information"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "Pillow>=10.0",
    "pyzbar>=0.1.9",
    "tldextract>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[project.scripts]
clinic-crawl = "clinic_crawl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["clinic_crawl"]

[tool.coverage.report]
show_missing = true
fail_under = 60
