[project]
name = "x-outreach"
version = "0.1.0"
description = "Automated X outreach pipeline for @ask.nandemo Korean dermatology expert"
requires-python = ">=3.13"
dependencies = [
    "playwright>=1.49",
    "playwright-stealth>=1.0.6",
    "tweepy>=4.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
